// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with major and minor version in the navigator 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with major, minor and patch version in the navigator 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should get the android status, address and toolbar height with only a major version in the navigator 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 80,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;

exports[`getAndroidStatusAddressToolBarOffsets should set the default toolbar height when the toolbar height will become negative 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 24,
    "width": 412,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 48,
    "width": 412,
    "x": 0,
    "y": 684,
  },
}
`;
